Reemplaza variables en comandos

--- a/deploy/docker-compose.tmpl.yml
+++ b/deploy/docker-compose.tmpl.yml
@@ -7,15 +7,17 @@ x-swfs-master:
   command:
     - -c
     - |
-      weed -logtostderr=true master
-        -mdir=${DATA_PATH}
-        -volumePreallocate
-        -volumeSizeLimitMB=1024
-        -defaultReplication=${DEFAULT_REPLICATION}
-        -ip=$${MASTER_IP}
-        -ip.bind=0.0.0.0
-        -port=${MASTER_PORT}
-        -peers=${MASTER_HOST}-1:${MASTER_PORT},${MASTER_HOST}-2:${MASTER_PORT},${MASTER_HOST}-3:${MASTER_PORT}
+      $$(echo "
+        weed -logtostderr=true master
+          -mdir=${DATA_PATH}
+          -volumePreallocate
+          -volumeSizeLimitMB=1024
+          -defaultReplication=${DEFAULT_REPLICATION}
+          -ip=$${MASTER_IP}
+          -ip.bind=0.0.0.0
+          -port=${MASTER_PORT}
+          -peers=${MASTER_HOST}-1:${MASTER_PORT},${MASTER_HOST}-2:${MASTER_PORT},${MASTER_HOST}-3:${MASTER_PORT}
+      ")
   networks:
     seaweedfs-net:
     traefik-net:
@@ -73,16 +75,18 @@ services:
     command:
       - -c
       - |
-        weed -logtostderr=true volume
-          -dir=${DATA_PATH}
-          -max=0
-          -dataCenter=$${VOLUME_DATACENTER}
-          -rack=$${VOLUME_RACK}
-          -ip=$${VOLUME_IP}
-          -ip.bind=0.0.0.0
-          -port=${VOLUME_PORT}
-          -publicUrl=${VOLUME_TRAEFIK_SUBDOMAIN}.${PUBLIC_HOSTNAME}
-          -mserver=${MASTER_HOST}-1:${MASTER_PORT},${MASTER_HOST}-2:${MASTER_PORT},${MASTER_HOST}-3:${MASTER_PORT}
+        $$(echo "
+          weed -logtostderr=true volume
+            -dir=${DATA_PATH}
+            -max=0
+            -dataCenter=$${VOLUME_DATACENTER}
+            -rack=$${VOLUME_RACK}
+            -ip=$${VOLUME_IP}
+            -ip.bind=0.0.0.0
+            -port=${VOLUME_PORT}
+            -publicUrl=${VOLUME_TRAEFIK_SUBDOMAIN}.${PUBLIC_HOSTNAME}
+            -mserver=${MASTER_HOST}-1:${MASTER_PORT},${MASTER_HOST}-2:${MASTER_PORT},${MASTER_HOST}-3:${MASTER_PORT}
+        ")
     hostname: ${VOLUME_IP}
     environment:
       VOLUME_IP:
@@ -125,14 +129,16 @@ services:
     command:
       - -c
       - |
-        weed -logtostderr=true filer
-          -dataCenter=$${FILER_PREFERED_DATACENTER}
-          -rack=$${FILER_PREFERED_RACK}
-          -filerGroup ${FILER_GROUP}
-          -ip=$${FILER_IP}
-          -ip.bind=0.0.0.0
-          -port=${FILER_PORT}
-          -master=${MASTER_HOST}-1:${MASTER_PORT},${MASTER_HOST}-2:${MASTER_PORT},${MASTER_HOST}-3:${MASTER_PORT}
+        $$(echo "
+          weed -logtostderr=true filer
+            -dataCenter=$${FILER_PREFERED_DATACENTER}
+            -rack=$${FILER_PREFERED_RACK}
+            -filerGroup ${FILER_GROUP}
+            -ip=$${FILER_IP}
+            -ip.bind=0.0.0.0
+            -port=${FILER_PORT}
+            -master=${MASTER_HOST}-1:${MASTER_PORT},${MASTER_HOST}-2:${MASTER_PORT},${MASTER_HOST}-3:${MASTER_PORT}
+        ")
     hostname: ${FILER_IP}
     environment:
       FILER_IP:
