Unifica servicios master y añade restricciones
Corrige criterio de replicación por defecto, para replicar 2 veces en
diferente rack (en lugar de otros volúmenes fuera de un rack, que no
hay).

Elimina redirección de Traefik para volume, no necesaria porque master
enlaza a la ruta correcta.

Retoca variables relacionadas con replicación de servicio master.

Renombra volúmenes de master para ser acordes al nuevo servicio
replicado.

Aumenta reserva de CPU para volume y filer.

--- a/deploy/.env
+++ b/deploy/.env
@@ -1,28 +1,31 @@
 IMAGE_NAME=chrislusf/seaweedfs
 IMAGE_TAG=latest
 
-MASTER_HOST=swfs-master
 MASTER_PORT=9333
-DEFAULT_REPLICATION=002
+MASTER_IP=swfs-master-{{.Task.Slot}}
+DEFAULT_REPLICATION=020
 
 VOLUME_PORT=8080
+VOLUME_IP=swfs-volume-{{.Node.ID}}
 
 FILER_PORT=8888
+FILER_IP=swfs-filer-{{.Node.ID}}
 FILER_GROUP=filergroup
 
+MASTER_HOST=swfs-master
 DATA_PATH=/data
 DATACENTER=datacenter
 RACK=r-{{.Node.ID}}
-VOLUME_IP=swfs-volume-{{.Node.ID}}
-FILER_IP=swfs-filer-{{.Node.ID}}
 
 TRAEFIK_ENTRYPOINT=http
 PUBLIC_HOSTNAME=change.me
-
 MASTER_TRAEFIK_SUBDOMAIN=swfs-master
 VOLUME_TRAEFIK_SUBDOMAIN=swfs-volume
 FILER_TRAEFIK_SUBDOMAIN=swfs-filer
-
 MASTER_TRAEFIK_AUTH=user:$apr1$md5password
 VOLUME_TRAEFIK_AUTH=user:$apr1$md5password
 FILER_TRAEFIK_AUTH=user:$apr1$md5password
+
+MASTER_VOL_NAME=seaweedfs-master-{{.Task.Slot}}-vol
+VOLUME_VOL_NAME=seaweedfs-volume-{{.Node.ID}}-vol
+FILER_VOL_NAME=seaweedfs-filer-{{.Node.ID}}-vol
