Añade chequeo de salud, aumenta memoria a filer

--- a/deploy/.env
+++ b/deploy/.env
@@ -17,6 +17,11 @@ DATA_PATH=/data
 DATACENTER=datacenter
 RACK=r-{{.Node.ID}}
 
+HEALTHCHECK_INTERVAL=30s
+HEALTHCHECK_TIMEOUT=15s
+HEALTHCHECK_RETRIES=5
+HEALTHCHECK_START_PERIOD=1m
+
 TRAEFIK_ENTRYPOINT=http
 PUBLIC_HOSTNAME=change.me
 MASTER_TRAEFIK_SUBDOMAIN=swfs-master
