Expone métricas para Prometheus

--- a/deploy/.env
+++ b/deploy/.env
@@ -16,6 +16,7 @@ MASTER_HOST=swfs-master
 DATA_PATH=/data
 DATACENTER=datacenter
 RACK=r-{{.Node.ID}}
+METRICS_PORT=9090
 
 HEALTHCHECK_INTERVAL=30s
 HEALTHCHECK_TIMEOUT=15s
