Ajusta valores por defecto

--- a/deploy/.env
+++ b/deploy/.env
@@ -10,11 +10,11 @@ VOLUME_IP=swfs-volume-{{.Node.ID}}
 
 FILER_PORT=8888
 FILER_IP=swfs-filer-{{.Node.ID}}
-FILER_GROUP=filergroup
+FILER_GROUP=filesystem
 
 MASTER_HOST=swfs-master
 DATA_PATH=/data
-DATACENTER=datacenter
+DATACENTER=dc
 RACK=r-{{.Node.ID}}
 METRICS_PORT=9090
 
