Añade servicio etcd para filer

--- a/deploy/.env
+++ b/deploy/.env
@@ -18,6 +18,14 @@ DATACENTER=dc
 RACK=r-{{.Node.ID}}
 METRICS_PORT=9090
 
+ETCD_DATA_PATH=/etcd-data
+ETCD_CLIENT_PORT=2379
+ETCD_PEER_PORT=2380
+ETCD_IP=swfs-etcd-{{.Task.Slot}}
+ETCD_HOST=swfs-etcd
+ETCD_CLUSTER_STATE=new
+ETCD_CLUSTER_TOKEN=changeme
+
 HEALTHCHECK_INTERVAL=15s
 HEALTHCHECK_TIMEOUT=60s
 HEALTHCHECK_RETRIES=10
@@ -35,3 +43,7 @@ FILER_TRAEFIK_AUTH=user:$apr1$md5password
 MASTER_VOL_NAME=seaweedfs-master-{{.Task.Slot}}-vol
 VOLUME_VOL_NAME=seaweedfs-volume-{{.Node.ID}}-vol
 FILER_VOL_NAME=seaweedfs-filer-{{.Node.ID}}-vol
+ETCD_VOL_NAME=seaweedfs-etcd-{{.Node.ID}}-vol
+
+MASTER_NODE_LABEL_NAME=swfs-master
+MASTER_NODE_LABEL_VALUE=1
