--- a/deploy/docker-compose.tmpl.yml
+++ b/deploy/docker-compose.tmpl.yml
@@ -198,12 +198,13 @@ services:
             --initial-cluster-state ${ETCD_CLUSTER_STATE}
             --initial-cluster-token ${ETCD_CLUSTER_TOKEN}
         ")
-    volumes:
-      - etcd-vol:${ETCD_DATA_PATH}
-    networks:
-      seaweedfs-net:
+    hostname: ${ETCD_IP}
     environment:
       ETCD_IP:
+    networks:
+      seaweedfs-net:
+    volumes:
+      - etcd-vol:${ETCD_DATA_PATH}
     deploy:
       mode: replicated
       replicas: ${ETCD_REPLICAS:-3}
@@ -218,10 +219,10 @@ services:
       resources:
         limits:
           cpus: '${ETCD_RESOURCES_LIMITS_CPUS:-0.1}'
-          memory: ${ETCD_RESOURCES_LIMITS_MEMORY:-16M}
+          memory: ${ETCD_RESOURCES_LIMITS_MEMORY:-32M}
         reservations:
           cpus: '${ETCD_RESOURCES_RESERVATIONS_CPUS:-0.001}'
-          memory: ${ETCD_RESOURCES_RESERVATIONS_MEMORY:-8M}
+          memory: ${ETCD_RESOURCES_RESERVATIONS_MEMORY:-16M}
 
 networks:
   seaweedfs-net:
