Expone puertos al host y modifica publicUrl
Mapea los puertos de filer y volume al host, para poder acceder desde la
máquina anfitriona.

Modifica publicUrl de volume, para que exponga una ruta resoluble desde
el host. Romperá el acceso desde el webui de master, pero permite el
acceso al plugin docker de volúmenes desde la máquina.

--- a/deploy/.env
+++ b/deploy/.env
@@ -7,10 +7,15 @@ DEFAULT_REPLICATION=020
 
 VOLUME_PORT=8080
 VOLUME_IP=swfs-volume-{{.Node.ID}}
+VOLUME_PUBLIC_HOST={{.Node.Hostname}}
+PUBLIC_VOLUME_PORT=8080
+VOLUME_PORT_MODE=host
 
 FILER_PORT=8888
 FILER_IP=swfs-filer-{{.Node.ID}}
 FILER_GROUP=filesystem
+PUBLIC_FILER_PORT=8888
+FILER_PORT_MODE=host
 
 MASTER_HOST=swfs-master
 DATA_PATH=/data
