Expone puerto grcp de filer al host
Para permitir el tránsito de datos también es necesario tener acceso a
este puerto desde la máquina.

--- a/deploy/.env
+++ b/deploy/.env
@@ -12,9 +12,11 @@ PUBLIC_VOLUME_PORT=8080
 VOLUME_PORT_MODE=host
 
 FILER_PORT=8888
+FILER_GRPC_PORT=18888
 FILER_IP=swfs-filer-{{.Node.ID}}
 FILER_GROUP=filesystem
 PUBLIC_FILER_PORT=8888
+PUBLIC_FILER_GRPC_PORT=18888
 FILER_PORT_MODE=host
 
 MASTER_HOST=swfs-master
