Añade nuevos parámetros y ajusta recursos
Permite ajustar parámetros interesantes, como el máximo de volúmenes
dentro del servicio volume.

Aumenta recursos para servicios, en especial volume, que necesita
espacio para los buffers. Reduce también recursos de filer, parece que
no requería tanto después de todo.

--- a/deploy/.env
+++ b/deploy/.env
@@ -3,10 +3,15 @@ IMAGE_TAG=latest
 
 MASTER_PORT=9333
 MASTER_IP=swfs-master-{{.Task.Slot}}
+MASTER_VOLUME_SIZE_LIMIT_MB=1024
 DEFAULT_REPLICATION=020
 
 VOLUME_PORT=8080
 VOLUME_IP=swfs-volume-{{.Node.ID}}
+VOLUME_MAX=0
+VOLUME_FILE_SIZE_LIMIT_MB=256
+VOLUME_UPLOAD_LIMIT_MB=256
+VOLUME_DOWNLOAD_LIMIT_MB=256
 VOLUME_PUBLIC_HOST={{.Node.Hostname}}
 PUBLIC_VOLUME_PORT=8080
 VOLUME_PORT_MODE=host
@@ -15,6 +20,9 @@ FILER_PORT=8888
 FILER_GRPC_PORT=18888
 FILER_IP=swfs-filer-{{.Node.ID}}
 FILER_GROUP=filesystem
+FILER_MAX_MB=4
+FILER_UPLOAD_LIMIT_MB=128
+FILER_DOWNLOAD_LIMIT_MB=0
 PUBLIC_FILER_PORT=8888
 PUBLIC_FILER_GRPC_PORT=18888
 FILER_PORT_MODE=host
