Aplica multitud de mejoras y amplía configuración
Tras multitud de pruebas, se ha consolidado la presente configuración
de despliegue. A continuación, los cambios destacados para cada
servicio:

En general:

Permite definir desde variables de entorno más valores de los que se
recogen en el comando como parámetros. Esto facilita su actualización
editando las variables del servicio.

Se elimina el servicio etcd, debido a problemas de llenado de memoria
cuando los ficheros contenidos cambian con mucha frecuencia. Se usa
store local en filer como sustituto.

Permite deshabilitar la exposición mediante traefik desde variable de
entorno.

En servicio master:

Cambia esquema de replicación por defecto, distribuyendo entre
datacenters en lugar de entre racks. Esto hace que mejoren los tiempos
de lectura, ya que no paraleliza el proceso entre las diferentes
réplicas (que están siempre en diferentes nodos del cluster Swarm).
Mantiene la creación de 2 copias por volumen, para tener 3 en total
(con la original) y poder asumir la caída de uno de los nodos.

Amplía nombre de datacenter para incluir identificador del nodo,
necesario para la distribución a nivel de datacenter.

Permite definir 'garbageThreshold'.

En servicio volume:

Permite definir modo de lectura. Por defecto, cada volume hace de proxy
para los volúmenes que no tiene en local. Se define que por defecto,
redirija la petición al correcto.

Asigna tamaño de buffer de lectura (4MB por defecto) y flag de lectura
lenta (habilitado por defecto) para no bloquear con peticiones largas.

Asigna etiqueta de volumen 'hdd' por defecto.

En servicio filer:

Habilita store local filerdb3, que integra sincronización entre
diferentes replicas y sustituye a etcd.

Amplia recursos de memoria y CPU, ahora que hace también el trabajo de
store.

--- a/deploy/.env
+++ b/deploy/.env
@@ -4,15 +4,20 @@ IMAGE_TAG=latest
 MASTER_PORT=9333
 MASTER_IP=swfs-master-{{.Task.Slot}}
 MASTER_VOLUME_SIZE_LIMIT_MB=1024
-DEFAULT_REPLICATION=020
+MASTER_DEFAULT_REPLICATION=200
+MASTER_GARBAGE_THRESHOLD=0.01
 
 VOLUME_PORT=8080
 VOLUME_IP=swfs-volume-{{.Node.ID}}
 VOLUME_MAX=0
+VOLUME_DISK=hdd
 VOLUME_FILE_SIZE_LIMIT_MB=256
 VOLUME_UPLOAD_LIMIT_MB=256
 VOLUME_DOWNLOAD_LIMIT_MB=256
 VOLUME_PUBLIC_HOST={{.Node.Hostname}}
+VOLUME_READ_MODE=redirect
+VOLUME_READ_BUFFER_SIZE=4
+VOLUME_HAS_SLOW_READ=true
 PUBLIC_VOLUME_PORT=8080
 VOLUME_PORT_MODE=host
 
@@ -29,23 +34,16 @@ FILER_PORT_MODE=host
 
 MASTER_HOST=swfs-master
 DATA_PATH=/data
-DATACENTER=dc
+DATACENTER=dc-{{.Node.ID}}
 RACK=r-{{.Node.ID}}
 METRICS_PORT=9090
-
-ETCD_DATA_PATH=/etcd-data
-ETCD_CLIENT_PORT=2379
-ETCD_PEER_PORT=2380
-ETCD_IP=swfs-etcd-{{.Task.Slot}}
-ETCD_HOST=swfs-etcd
-ETCD_CLUSTER_STATE=new
-ETCD_CLUSTER_TOKEN=changeme
 
 HEALTHCHECK_INTERVAL=15s
 HEALTHCHECK_TIMEOUT=60s
 HEALTHCHECK_RETRIES=10
 HEALTHCHECK_START_PERIOD=2m
 
+TRAEFIK_ENABLE=true
 TRAEFIK_ENTRYPOINT=http
 PUBLIC_HOSTNAME=change.me
 MASTER_TRAEFIK_SUBDOMAIN=swfs-master
@@ -58,7 +56,3 @@ FILER_TRAEFIK_AUTH=user:$apr1$md5password
 MASTER_VOL_NAME=seaweedfs-master-{{.Task.Slot}}-vol
 VOLUME_VOL_NAME=seaweedfs-volume-{{.Node.ID}}-vol
 FILER_VOL_NAME=seaweedfs-filer-{{.Node.ID}}-vol
-ETCD_VOL_NAME=seaweedfs-etcd-{{.Node.ID}}-vol
-
-MASTER_NODE_LABEL_NAME=swfs-master
-MASTER_NODE_LABEL_VALUE=1
